@@ -36,6 +36,9 @@
 - Added ``signal`` command to supervisorctl.  Thanks to Moriyoshi Koizumi and
   Marc Abramowitz for the patches.
 
+- Errors caused by bad values in a config file now show the config section
+  to make debugging easier.  Patch by Marc Abramowitz.
+
 3.1.3 (2014-10-28)
 ------------------
 
